[GTK] Fix problems found by Coverity scan in platform's keyboard and mouse events https://bugs.webkit.org/show_bug.cgi?id=169028

Reviewed by Carlos Garcia Campos.

* platform/gtk/PlatformKeyboardEventGtk.cpp:
(WebCore::PlatformKeyboardEvent::PlatformKeyboardEvent): Initialize
the m_handledByInputMethod member.
* platform/gtk/PlatformMouseEventGtk.cpp:
(WebCore::PlatformMouseEvent::PlatformMouseEvent): Initialize the
m_modifierFlags member.

Canonical link: https://commits.webkit.org/186016@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213218 268f45cc-cd09-0410-ab3c-d52691b4dbfc