Source/WebCore/platform/gtk/PlatformKeyboardEventGtk.cpp
@@ -1267,6 +1267,7 @@ PlatformKeyboardEvent::PlatformKeyboardEvent(GdkEventKey* event, const Compositi
     , m_keyIdentifier(keyIdentifierForGdkKeyCode(event->keyval))
     , m_windowsVirtualKeyCode(windowsKeyCodeForGdkKeyCode(event->keyval))
     , m_autoRepeat(false)
+    , m_handledByInputMethod(false)
     , m_isKeypad(event->keyval >= GDK_KP_Space && event->keyval <= GDK_KP_9)
     , m_isSystemKey(false)
     , m_gdkEventKey(event)
